Fixed carousel image stretch on mobile

--- a/medapp/static/css/custom.css
+++ b/medapp/static/css/custom.css
@@ -279,6 +279,7 @@ body {
 
 .myCarousel {
 	margin: 0;
+	width: auto;
 }
 
 #calendar{
